fixed the home section for normal screen also on mobile screen

--- a/website-2/css/style.css
+++ b/website-2/css/style.css
@@ -83,28 +83,33 @@
 	font-size: 50px;
 }
 
+#sidebar-one {
+	min-height: 750px;
+	float: left;
+	width: 40%;
+	margin-left: 100px;
+	background-image: url("../images/tablesetting.jpg");
+	background-repeat: no-repeat;
+	box-sizing: border-box;
+}
+
 #main-one {
 	min-height: 502px;
 	float: right;
 	width: 50%;
-	padding-top: 80px;
-	padding: 0 30px;
-	box-sizing: border-box;
+	/* padding-top: 80px;
+	padding: 0 30px; */
 	line-height: 1.5;
 	font-size: 20px;
 	font-weight: 400;
 	padding-right: 100px;
 	color: gray;
+	box-sizing: border-box;
+	margin: 0px;
 }
 
-#sidebar-one {
-	min-height: 502px;
-	float: left;
-	width: 50%;
-	padding: 10px;
-	padding-left: 100px;
-	box-sizing: border-box;
-}
+
+
 
 .clr {
 	clear: both;
@@ -174,6 +179,147 @@ body {
 	margin-right: 0px;
 	overflow-x: hidden;
 }
+
+
+/* FOR MOBILE Screen */
+@media screen and (max-device-width: 480px) {
+	body {
+		/* background-color: yellowgreen; */
+		margin: 0px;
+	}
+
+	.nav {
+		/* margin-top: px; */
+		top: 0px;
+		left: 0px;
+		right: 0px;
+		background-color: white;
+		width: 100%;
+		min-height: 100px;
+		line-height: 50%;
+		/* position: fixed; */
+		/* overflow: hidden; */
+		/* box-sizing: inherit; */
+		/* display: block; */
+		unicode-bidi: isolate;
+	}
+
+	.img {
+		margin-top: 100px;
+		background-repeat: no-repeat;
+		/* background-position: center right; */
+		/* min-height: 300px; */
+		margin-bottom: 30px;
+		/* text-align: center; */
+		background-image: url("../images/showcase-980-800.jpg");
+		min-height: 800px;
+	}
+
+	.logo {
+		padding: 20px;
+		/* padding-top: 20px; */
+		font-style: italic;
+		/* float: left; */
+		font-size: 30px;
+		width: 100%;
+		/* text-align: center; */
+		margin: auto;
+		font-family: Arial, Helvetica, sans-serif;
+		padding-left: 40px;
+	}
+
+	.navbar {
+		padding: 20px;
+		/* float: right; */
+		font-size: 30px;
+		font-family: Arial, Helvetica, sans-serif;
+		margin: auto;
+		/* margin-top: ; */
+		/* padding-right: 45px; */
+		word-spacing: 25px;
+		width: 100%;
+		text-align: center;
+		/* box-sizing: border-box; */
+	}
+
+	#main-one {
+		min-height: 502px;
+		float: right;
+		width: 40%;
+		box-sizing: border-box;
+		line-height: 1.2;
+		font-size: 20px;
+		font-weight: 400;
+		color: gray;
+		padding: 0px;
+	}
+
+	#main-one h1 {
+		margin-top: 0px;
+	}
+
+	#sidebar-one {
+		min-height: 502px;
+		float: left;
+		width: 50%;
+		padding: 05px;
+		padding-left: 60px;
+		box-sizing: border-box;
+	}
+
+	#main-two h1 {
+		margin-top: 0px;
+		/* text-align: center;
+		color: black;
+		font-size: 50px; */
+	}
+
+	#main-two {
+		min-height: 502px;
+		/* float: left; */
+		width: 45%;
+		/* padding: 0 30px; */
+		/* padding-top: 80px; */
+		/* padding: 0px; */
+		margin-left: 0px;
+		box-sizing: border-box;
+		line-height: 1.2;
+		font-size: 20px;
+		font: weight 400;
+		color: gray;
+		/* padding-left: 100px; */
+	}
+
+	#sidebar-two {
+		/* min-height: 600px; */
+		float: right;
+		width: 55%;
+		padding: 0px;
+		/* margin-right: 0px; */
+		/* box-sizing: border-box; */
+	}
+
+	#main-three h1 {
+		text-align: center;
+		color: black;
+		font-size: 50px;
+	}
+
+	#main-three {
+		/* padding-left: 100px;
+		padding-right: 100px; */
+		line-height: 1.2;
+		font-size: 20px;
+		font: weight 400;
+		color: gray;
+	}
+
+	.form {
+		text-align: center;
+
+	}
+}
+
 
 /* For Custom Small Screen */
 @media (max-width: 480px) {
@@ -250,98 +396,15 @@ body {
 	#main-one h1 {
 		margin-top: 0px;
 	}
-	
+
 	#sidebar-one {
 		min-height: 502px;
 		float: left;
 		width: 50%;
-		padding: 05px;
-		padding-left: 60px;
+		/* padding: 5px; */
+		/* padding-left: 60px; */
 		box-sizing: border-box;
-	}
-}
+		/* background-image: url("../images/showcase-250-800.jpg"); */
 
-/* FOR MOBILE Screen */
-@media screen and (max-device-width: 480px) {
-	body {
-		/* background-color: yellowgreen; */
-		margin: 0px;
-	}
-
-	.nav {
-		/* margin-top: px; */
-		top: 0px;
-		left: 0px;
-		right: 0px;
-		background-color: white;
-		width: 100%;
-		min-height: 65px;
-		line-height: 50%;
-		/* position: fixed; */
-		/* overflow: hidden; */
-		/* box-sizing: inherit; */
-		/* display: block; */
-		unicode-bidi: isolate;
-	}
-
-	.img {
-		margin-top: 65px;
-		background-repeat: no-repeat;
-		/* background-position: center right; */
-		min-height: 300px;
-		margin-bottom: 30px;
-		/* text-align: center; */
-		background-image: url("../images/showcase-480-800.png");
-		min-height: 800px;
-	}
-
-	.logo {
-		/* padding-top: 20px; */
-		font-style: italic;
-		/* float: left; */
-		font-size: 25px;
-		width: 100%;
-		/* text-align: center; */
-		margin: auto;
-		font-family: Arial, Helvetica, sans-serif;
-		/* padding-left: 35px; */
-	}
-
-	.navbar {
-		/* float: right; */
-		font-size: 20px;
-		font-family: Arial, Helvetica, sans-serif;
-		margin: auto;
-		/* margin-top: ; */
-		/* padding-right: 45px; */
-		word-spacing: 20px;
-		width: 100%;
-		text-align: center;
-		/* box-sizing: border-box; */
-	}
-
-	#main-one {
-		min-height: 502px;
-		float: right;
-		width: 40%;
-		box-sizing: border-box;
-		line-height: 1.2;
-		font-size: 20px;
-		font-weight: 400;
-		color: gray;
-		padding: 0px;
-	}
-
-	#main-one h1 {
-		margin-top: 0px;
-	}
-	
-	#sidebar-one {
-		min-height: 502px;
-		float: left;
-		width: 50%;
-		padding: 05px;
-		padding-left: 60px;
-		box-sizing: border-box;
 	}
 }
